--- a/pom.xml
+++ b/pom.xml
@@ -80,7 +80,16 @@
             <artifactId>servlet-api</artifactId>
             <version>2.5</version>
         </dependency>
-
+        <dependency>
+            <groupId>net.sf.json-lib</groupId>
+            <artifactId>json-lib</artifactId>
+            <version>2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.struts</groupId>
+            <artifactId>struts2-json-plugin</artifactId>
+            <version>2.2.3</version>
+        </dependency>
     </dependencies>
 
     <build>
